# YASIN

./: .gitignore  CMakeLists.txt  compile_commands.json  makefile
include/: board.hpp  game.hpp  player.hpp
include/drawable/: drawable.hpp  food.hpp  snake.hpp
lib/: board.hpp  game.hpp
lib/drawable/: drawable.hpp  food.hpp  snake.hpp
src/: board.cpp  food.cpp  game.cpp  main.cpp  player.cpp  snake.cpp
src/drawable/: food.cpp  snake.cpp
